--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,9 @@ a{
 
 .recipes div{
     max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .recipes img {
@@ -115,7 +118,27 @@ a{
     color: #1f2937;
 }
 
+#quote {
+    margin: 100px 500px 0 500px;
+}
+
+#person {
+    text-align: end;
+    margin: 0 500px 100px 500px;
+}
+
 .signup,
 .button {
     background-color: #3882f6;
+}
+
+.signup{
+    margin: 100px 400px 100px 400px;
+    padding: 50px;
+    display: flex;
+}
+
+.footer{
+    text-align: center;
+    padding: 50px;
 }
