--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@ body {
 
 .hero,
 .footer {
-    background-color: #1f2937;
+    background-color: #1f2937;   
 }
 
 .second,
 a,
 .footer
-/*add class to the product section*/{
+{
     font-size: 18px;
     color: #e5e7eb;
 }
@@ -72,7 +72,7 @@ a{
     flex-shrink: 0;
     margin: 8px 0;
     border-radius: 25px;
-    padding: 5px 25px;
+    padding: 10px 25px;
     max-width: 120px;
     text-align: center;
     color: white;
@@ -99,7 +99,7 @@ a{
 }
 
 .recipes div{
-    max-width: 150px;
+    max-width: 170px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,11 +107,16 @@ a{
 
 .recipes img {
     height: auto;
-    width: 150px;
+    width: 170px;
     border-style: solid;
     border-color: #3882f6;
     border-radius: 10px;
 }
+
+.description {
+    text-align: center;
+}
+
 .quote {
     background-color: #e5e7eb;
     font-size: 36px;
@@ -132,10 +137,18 @@ a{
     background-color: #3882f6;
 }
 
+.button.two{
+    border-style: solid;
+    border-color: white;
+    border-radius: 10px;
+    border-width: 2px;
+}
+
 .signup{
     margin: 100px 400px 100px 400px;
     padding: 50px;
     display: flex;
+    justify-content: space-between;
 }
 
 .footer{
